--- a/po/stellarium/ml.po
+++ b/po/stellarium/ml.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-23 16:53+0700\n"
-"PO-Revision-Date: 2011-12-14 17:51+0000\n"
-"Last-Translator: BRIJESH E.P <Unknown>\n"
+"PO-Revision-Date: 2012-06-25 19:31+0000\n"
+"Last-Translator: Sibi Antony <Unknown>\n"
 "Language-Team: Malayalam <ml@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-24 05:21+0000\n"
-"X-Generator: Launchpad (build 15461)\n"
+"X-Launchpad-Export-Date: 2012-06-26 05:21+0000\n"
+"X-Generator: Launchpad (build 15482)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -342,7 +342,7 @@ msgstr "Az/Alt: %1/%2"
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "നെറ്റ്‌വര്‍ക്ക് പിഴവു്"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
@@ -350,19 +350,19 @@ msgstr ""
 
 #: src/core/SimbadSearcher.cpp:130
 msgid "Querying"
-msgstr ""
+msgstr "ക്വറി ചെയ്യുന്നു"
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "പിഴവ്"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
-msgstr ""
+msgstr "ലഭ്യമല്ല"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Found"
-msgstr ""
+msgstr "ലഭ്യമാണ്"
 
 #: src/gui/ConfigurationDialog.cpp:346
 msgid "Select screenshot directory"
@@ -559,7 +559,7 @@ msgstr ""
 #: src/gui/HelpDialog.cpp:82
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:82
 msgid "Text User Interface"
-msgstr ""
+msgstr "ടെക്സ്റ്റ്‌  യൂസര്‍ ഇന്റര്‍ഫേസ്"
 
 #: src/gui/HelpDialog.cpp:171
 msgid "Stellarium Help"
@@ -1117,11 +1117,11 @@ msgstr ""
 
 #: src/gui/SearchDialog.cpp:507
 msgid "University of Strasbourg (France)"
-msgstr ""
+msgstr "സ്ട്രാസ്ബൌര്‍ഗ് സർവ്വകലാശാല (ഫ്രാൻസ്)"
 
 #: src/gui/SearchDialog.cpp:508
 msgid "Harvard University (USA)"
-msgstr ""
+msgstr "ഹാര്‍വാര്‍ഡ് സർവ്വകലാശാല (യു.എസ്‌.എ)"
 
 #: src/main.cpp:337
 msgid "This system does not support OpenGL."
@@ -1549,7 +1549,7 @@ msgstr "പാശ്ചാത്യം"
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:162
 msgid "Guereins"
-msgstr ""
+msgstr "ഗ്യൂറൈൻസ്"
 
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:164
@@ -1559,17 +1559,17 @@ msgstr ""
 #. TRANSLATORS: Landscape name: Hurricane Ridge
 #: src/translations.h:168
 msgid "Hurricane"
-msgstr ""
+msgstr "ചുഴലിക്കാറ്റ്"
 
 #. TRANSLATORS: Name of landscape
 #: src/translations.h:170
 msgid "Ocean"
-msgstr ""
+msgstr "സമുദ്രം"
 
 #. TRANSLATORS: Landscape name: Garching bei Munchen
 #: src/translations.h:172
 msgid "Garching"
-msgstr ""
+msgstr "ഗാര്‍ഹിംഗ്"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:180
@@ -1584,17 +1584,17 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:184
 msgid "Total Lunar Eclipse"
-msgstr ""
+msgstr "സമ്പൂർണ്ണചന്ദ്രഗ്രഹണം"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:186
 msgid "Screensaver"
-msgstr ""
+msgstr "സ്‌ക്രീന്‍സേവര്‍"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:188
 msgid "Solar Eclipse 2009"
-msgstr ""
+msgstr "സൂര്യഗ്രഹണം 2009"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:190
@@ -1641,127 +1641,127 @@ msgstr ""
 
 #: src/translations.h:204
 msgid "Andorra"
-msgstr ""
+msgstr "അന്‍ഡോറാ"
 
 #: src/translations.h:205
 msgid "United Arab Emirates"
-msgstr ""
+msgstr "യുണൈറ്റഡ് അറബ് എമിറേറ്റ്സ്"
 
 #: src/translations.h:206
 msgid "Afghanistan"
-msgstr ""
+msgstr "അഫ്ഗാനിസ്ഥാന്‍"
 
 #: src/translations.h:207
 msgid "Antigua and Barbuda"
-msgstr ""
+msgstr "ആന്റിഗ്വാ ആന്‍ഡ് ബാര്‍ബുഡ"
 
 #: src/translations.h:208
 msgid "Anguilla"
-msgstr ""
+msgstr "ആന്‍ഗ്വില"
 
 #: src/translations.h:209
 msgid "Albania"
-msgstr ""
+msgstr "അല്‍ബേനിയ"
 
 #: src/translations.h:210
 msgid "Armenia"
-msgstr ""
+msgstr "അര്‍മേനിയ"
 
 #: src/translations.h:211
 msgid "Netherlands Antilles"
-msgstr ""
+msgstr "നെതര്‍ലന്‍ഡ്സ് ആന്റിലസ്"
 
 #: src/translations.h:212
 msgid "Angola"
-msgstr ""
+msgstr "അംഗോള"
 
 #: src/translations.h:213
 msgid "Antarctica"
-msgstr ""
+msgstr "അന്റാര്‍ട്ടിക്ക"
 
 #: src/translations.h:214
 msgid "Argentina"
-msgstr ""
+msgstr "അര്‍ജന്റീന"
 
 #: src/translations.h:215
 msgid "American Samoa"
-msgstr ""
+msgstr "അമേരിക്കന്‍ സമോവ"
 
 #: src/translations.h:216
 msgid "Austria"
-msgstr ""
+msgstr "ഓസ്‌ട്രിയ"
 
 #: src/translations.h:217
 msgid "Australia"
-msgstr ""
+msgstr "ഓസ്‌ട്രേലിയ"
 
 #: src/translations.h:218
 msgid "Aruba"
-msgstr ""
+msgstr "അറൂബ"
 
 #: src/translations.h:219
 msgid "Azerbaijan"
-msgstr ""
+msgstr "അസ‌ര്‍ബൈജാന്‍"
 
 #: src/translations.h:220
 msgid "Bosnia and Herzegowina"
-msgstr ""
+msgstr "ബോസ്നിയ ആന്റ് ഹെർസെഗോവിന"
 
 #: src/translations.h:221
 msgid "Barbados"
-msgstr ""
+msgstr "ബാര്‍ബാഡോസ്"
 
 #: src/translations.h:222
 msgid "Bangladesh"
-msgstr ""
+msgstr "ബംഗ്ളാദേശ്"
 
 #: src/translations.h:223
 msgid "Belgium"
-msgstr ""
+msgstr "ബെൽജിയം"
 
 #: src/translations.h:224
 msgid "Burkina Faso"
-msgstr ""
+msgstr "ബർക്കിനാ ഫാസോ"
 
 #: src/translations.h:225
 msgid "Bulgaria"
-msgstr ""
+msgstr "ബള്‍ഗേറിയ"
 
 #: src/translations.h:226
 msgid "Bahrain"
-msgstr ""
+msgstr "ബഹറിന്‍"
 
 #: src/translations.h:227
 msgid "Burundi"
-msgstr ""
+msgstr "ബറുണ്ടി"
 
 #: src/translations.h:228
 msgid "Benin"
-msgstr ""
+msgstr "ബെനിന്‍"
 
 #: src/translations.h:229
 msgid "Bermuda"
-msgstr ""
+msgstr "ബെർമുഡ"
 
 #: src/translations.h:230
 msgid "Brunei Darussalam"
-msgstr ""
+msgstr "ബ്രൂണെയ് ദാറുസ്സലാം"
 
 #: src/translations.h:231
 msgid "Bolivia"
-msgstr ""
+msgstr "ബൊളീവിയ"
 
 #: src/translations.h:232
 msgid "Brazil"
-msgstr ""
+msgstr "ബ്രസീൽ"
 
 #: src/translations.h:233
 msgid "Bahamas"
-msgstr ""
+msgstr "ബഹാമാസ്"
 
 #: src/translations.h:234
 msgid "Bhutan"
-msgstr ""
+msgstr "ഭൂട്ടാന്‍"
 
 #: src/translations.h:235
 msgid "Bouvet Island"
@@ -1769,507 +1769,507 @@ msgstr ""
 
 #: src/translations.h:236
 msgid "Botswana"
-msgstr ""
+msgstr "ബോട്സ്വാന"
 
 #: src/translations.h:237
 msgid "Belarus"
-msgstr ""
+msgstr "ബെലാറസ്"
 
 #: src/translations.h:238
 msgid "Belize"
-msgstr ""
+msgstr "ബെലീസ്"
 
 #: src/translations.h:239
 msgid "Canada"
-msgstr ""
+msgstr "കാനഡ"
 
 #: src/translations.h:240
 msgid "Cocos Islands"
-msgstr ""
+msgstr "കൊകോസ് ദ്വീപുകള്‍"
 
 #: src/translations.h:241
 msgid "Democratic Republic of the Congo"
-msgstr ""
+msgstr "ഡെമോക്രാറ്റിക് റിപബ്ലിക് ഓഫ് കോംഗോ"
 
 #: src/translations.h:242
 msgid "Central African Republic"
-msgstr ""
+msgstr "മദ്ധ്യ ആഫ്രിക്കൻ റിപ്പബ്ലിക്ക്"
 
 #: src/translations.h:243
 msgid "Republic of the Congo"
-msgstr ""
+msgstr "റിപബ്ലിക് ഓഫ് ദി കോംഗോ"
 
 #: src/translations.h:244
 msgid "Switzerland"
-msgstr ""
+msgstr "സ്വിറ്റ്സ‌ര്‍ലാന്‍ഡ്"
 
 #: src/translations.h:245
 msgid "Cote d'Ivoire"
-msgstr ""
+msgstr "കോട്ടേ ഡെല്‍‍വോയിര്‍"
 
 #: src/translations.h:246
 msgid "Cook Islands"
-msgstr ""
+msgstr "കുക്ക് ദ്വീപുകള്‍"
 
 #: src/translations.h:247
 msgid "Chile"
-msgstr ""
+msgstr "ചിലി"
 
 #: src/translations.h:248
 msgid "Cameroon"
-msgstr ""
+msgstr "കാമറൂൺ"
 
 #: src/translations.h:249
 msgid "China"
-msgstr ""
+msgstr "ചൈന"
 
 #: src/translations.h:250
 msgid "Colombia"
-msgstr ""
+msgstr "കൊളംബിയ‌"
 
 #: src/translations.h:251
 msgid "Costa Rica"
-msgstr ""
+msgstr "കോസ്റ്റ റീക്ക"
 
 #: src/translations.h:252
 msgid "Serbia and Montenegro"
-msgstr ""
+msgstr "സെര്‍ബിയയും മോണ്ടിനെഗ്രോയും"
 
 #: src/translations.h:253
 msgid "Cuba"
-msgstr ""
+msgstr "ക്യൂബ"
 
 #: src/translations.h:254
 msgid "Cape Verde"
-msgstr ""
+msgstr "കേപ് വെര്‍ഡെ"
 
 #: src/translations.h:255
 msgid "Christmas Island"
-msgstr ""
+msgstr "ക്രിസ്തുമസ് ദ്വീപ്"
 
 #: src/translations.h:256
 msgid "Cyprus"
-msgstr ""
+msgstr "സൈപ്രസ്സ്"
 
 #: src/translations.h:257
 msgid "Czech Republic"
-msgstr ""
+msgstr "ചെക്ക്‌ റിപ്പബ്ലിക്ക്‌"
 
 #: src/translations.h:258
 msgid "Germany"
-msgstr ""
+msgstr "ജ‌ര്‍മ്മനി"
 
 #: src/translations.h:259
 msgid "Djibouti"
-msgstr ""
+msgstr "ജിബൌട്ടി"
 
 #: src/translations.h:260
 msgid "Denmark"
-msgstr ""
+msgstr "ഡെന്മാർക്ക്"
 
 #: src/translations.h:261
 msgid "Dominica"
-msgstr ""
+msgstr "‌ഡൊമിനിക്ക"
 
 #: src/translations.h:262
 msgid "Dominican Republic"
-msgstr ""
+msgstr "‌ഡൊമിനിക്കന്‍ റിപബ്ലിക്ക്"
 
 #: src/translations.h:263
 msgid "Algeria"
-msgstr ""
+msgstr "അള്‍ജീരിയ"
 
 #: src/translations.h:264
 msgid "Ecuador"
-msgstr ""
+msgstr "ഇക്ക്വഡോര്‍"
 
 #: src/translations.h:265
 msgid "Estonia"
-msgstr ""
+msgstr "എസ്റ്റോണിയ"
 
 #: src/translations.h:266
 msgid "Egypt"
-msgstr ""
+msgstr "ഈജിപ്ത്"
 
 #: src/translations.h:267
 msgid "Western Sahara"
-msgstr ""
+msgstr "പശ്ചിമ സഹാറ"
 
 #: src/translations.h:268
 msgid "Eritrea"
-msgstr ""
+msgstr "എറിട്രിയ"
 
 #: src/translations.h:269
 msgid "Spain"
-msgstr ""
+msgstr "സ്പെയിന്‍"
 
 #: src/translations.h:270
 msgid "Ethiopia"
-msgstr ""
+msgstr "എത്യോപ്യ"
 
 #: src/translations.h:271
 msgid "Finland"
-msgstr ""
+msgstr "ഫിന്‍ലാന്റ്"
 
 #: src/translations.h:272
 msgid "Fiji"
-msgstr ""
+msgstr "ഫിജി"
 
 #: src/translations.h:273
 msgid "Falkland Islands"
-msgstr ""
+msgstr "ഫാക്‌ലാന്‍ഡ്  ദ്വീപുകള്‍"
 
 #: src/translations.h:274
 msgid "Micronesia"
-msgstr ""
+msgstr "മൈക്രോണേഷ്യ"
 
 #: src/translations.h:275
 msgid "Faroe Islands"
-msgstr ""
+msgstr "ഫാറോ ദ്വീപുകള്‍"
 
 #: src/translations.h:276
 msgid "France"
-msgstr ""
+msgstr "ഫ്രാന്‍സ്"
 
 #: src/translations.h:277
 msgid "Gabon"
-msgstr ""
+msgstr "ഗാബോണ്‍"
 
 #: src/translations.h:278
 msgid "United Kingdom"
-msgstr ""
+msgstr "യുണൈറ്റഡ് കിങ്ഡം"
 
 #: src/translations.h:279
 msgid "Grenada"
-msgstr ""
+msgstr "ഗ്രനാഡ"
 
 #: src/translations.h:280
 msgid "Georgia"
-msgstr ""
+msgstr "ജോര്‍ജിയ"
 
 #: src/translations.h:281
 msgid "French Guiana"
-msgstr ""
+msgstr "ഫ്രഞ്ച് ഗയാന"
 
 #: src/translations.h:282
 msgid "Ghana"
-msgstr ""
+msgstr "ഘാന"
 
 #: src/translations.h:283
 msgid "Gibraltar"
-msgstr ""
+msgstr "ജിബ്രാള്‍ട്ടര്‍"
 
 #: src/translations.h:284
 msgid "Greenland"
-msgstr ""
+msgstr "ഗ്രീന്‍ലാന്‍ഡ്"
 
 #: src/translations.h:285
 msgid "Gambia"
-msgstr ""
+msgstr "ഗാംബിയ"
 
 #: src/translations.h:286
 msgid "Guinea"
-msgstr ""
+msgstr "ഗിനി"
 
 #: src/translations.h:287
 msgid "Guadeloupe"
-msgstr ""
+msgstr "ഗ്വാഡെലോപ്"
 
 #: src/translations.h:288
 msgid "Equatorial Guinea"
-msgstr ""
+msgstr "ഇക്വറ്റോറിയൽ ഗിനി"
 
 #: src/translations.h:289
 msgid "Greece"
-msgstr ""
+msgstr "ഗ്രീസ്"
 
 #: src/translations.h:290
 msgid "South Georgia and the South Sandwich Islands"
-msgstr ""
+msgstr "തെക്കന്‍ ജോര്‍ജിയയും തെക്കന്‍ സാന്‍ഡ്‌വിച്ചും ദ്വീപുകള്‍"
 
 #: src/translations.h:291
 msgid "Guatemala"
-msgstr ""
+msgstr "ഗ്വാട്ടിമാല"
 
 #: src/translations.h:292
 msgid "Guam"
-msgstr ""
+msgstr "ഗ്വാം"
 
 #: src/translations.h:293
 msgid "Guinea-Bissau"
-msgstr ""
+msgstr "ഗിനി-ബിസൗ"
 
 #: src/translations.h:294
 msgid "Guyana"
-msgstr ""
+msgstr "ഗയാന"
 
 #: src/translations.h:295
 msgid "Hong Kong"
-msgstr ""
+msgstr "ഹോങ്കോങ്"
 
 #: src/translations.h:296
 msgid "Heard Island and McDonald Islands"
-msgstr ""
+msgstr "ഹെര്‍ഡ് ദ്വീപും മക്ഡൊണാള്‍ഡ് ദ്വീപുകളും"
 
 #: src/translations.h:297
 msgid "Honduras"
-msgstr ""
+msgstr "ഹോണ്ടുറാസ്"
 
 #: src/translations.h:298
 msgid "Croatia"
-msgstr ""
+msgstr "ക്രോയേഷ്യ"
 
 #: src/translations.h:299
 msgid "Haiti"
-msgstr ""
+msgstr "ഹെയ്‌റ്റി"
 
 #: src/translations.h:300
 msgid "Hungary"
-msgstr ""
+msgstr "ഹംഗറി"
 
 #: src/translations.h:301
 msgid "Indonesia"
-msgstr ""
+msgstr "ഇന്‍ഡോനേഷ്യ"
 
 #: src/translations.h:302
 msgid "Ireland"
-msgstr ""
+msgstr "അയർലണ്ട്"
 
 #: src/translations.h:303
 msgid "Israel"
-msgstr ""
+msgstr "ഇസ്രയേൽ"
 
 #: src/translations.h:304
 msgid "India"
-msgstr ""
+msgstr "ഇന്ത്യ"
 
 #: src/translations.h:305
 msgid "British Indian Ocean Territory"
-msgstr ""
+msgstr "ബ്രിട്ടീഷ് ഇന്ത്യന്‍ മഹാസമുദ്ര പ്രദേശം"
 
 #: src/translations.h:306
 msgid "Iraq"
-msgstr ""
+msgstr "ഇറാഖ്‌"
 
 #: src/translations.h:307
 msgid "Iran"
-msgstr ""
+msgstr "ഇറാൻ"
 
 #: src/translations.h:308
 msgid "Iceland"
-msgstr ""
+msgstr "ഐസ്‌ലാന്റ്"
 
 #: src/translations.h:309
 msgid "Italy"
-msgstr ""
+msgstr "ഇറ്റലി‌"
 
 #: src/translations.h:310
 msgid "Jamaica"
-msgstr ""
+msgstr "ജമൈക്ക"
 
 #: src/translations.h:311
 msgid "Jordan"
-msgstr ""
+msgstr "ജോര്‍ദാന്‍"
 
 #: src/translations.h:312
 msgid "Japan"
-msgstr ""
+msgstr "ജപ്പാൻ"
 
 #: src/translations.h:313
 msgid "Kenya"
-msgstr ""
+msgstr "കെ നി യ"
 
 #: src/translations.h:314
 msgid "Kyrgyzstan"
-msgstr ""
+msgstr "കിർഗ്ഗിസ്ഥാൻ"
 
 #: src/translations.h:315
 msgid "Cambodia"
-msgstr ""
+msgstr "കംബോഡിയ"
 
 #: src/translations.h:316
 msgid "Kiribati"
-msgstr ""
+msgstr "കിരീബാസ്"
 
 #: src/translations.h:317
 msgid "Comoros"
-msgstr ""
+msgstr "കൊമോറസ്"
 
 #: src/translations.h:318
 msgid "Saint Kitts and Nevis"
-msgstr ""
+msgstr "സെയ്ന്റ് കിറ്റ്സ് നീവസ്"
 
 #: src/translations.h:319
 msgid "Democratic People's Republic of Korea"
-msgstr ""
+msgstr "ഡെമോക്രാറ്റിക് പീപ്പിള്‍സ് റിപ്പബ്ലിക് ഓഫ് കൊറിയ"
 
 #: src/translations.h:320
 msgid "Republic of Korea"
-msgstr ""
+msgstr "റിപ്പബ്ലിക് ഓഫ് കൊറിയ"
 
 #: src/translations.h:321
 msgid "Kuwait"
-msgstr ""
+msgstr "കുവൈറ്റ്‌"
 
 #: src/translations.h:322
 msgid "Cayman Islands"
-msgstr ""
+msgstr "കേയ്മാന്‍ ദ്വീപുകള്‍"
 
 #: src/translations.h:323
 msgid "Kazakhstan"
-msgstr ""
+msgstr "ഖസാഖ്‌സ്ഥാൻ"
 
 #: src/translations.h:324
 msgid "Lao"
-msgstr ""
+msgstr "ലാവോ"
 
 #: src/translations.h:325
 msgid "Lebanon"
-msgstr ""
+msgstr "ലെബനോണ്‍"
 
 #: src/translations.h:326
 msgid "Saint Lucia"
-msgstr ""
+msgstr "സെയ്ന്റ് ലൂസിയ"
 
 #: src/translations.h:327
 msgid "Liechtenstein"
-msgstr ""
+msgstr "ലിക്റ്റൻ‌സ്റ്റൈൻ"
 
 #: src/translations.h:328
 msgid "Sri Lanka"
-msgstr ""
+msgstr "ശ്രീലങ്ക"
 
 #: src/translations.h:329
 msgid "Liberia"
-msgstr ""
+msgstr "ലൈബീരിയ"
 
 #: src/translations.h:330
 msgid "Lesotho"
-msgstr ""
+msgstr "ലെസോത്തോ"
 
 #: src/translations.h:331
 msgid "Lithuania"
-msgstr ""
+msgstr "ലിത്വാനിയ"
 
 #: src/translations.h:332
 msgid "Luxembourg"
-msgstr ""
+msgstr "ലക്സംബർഗ്"
 
 #: src/translations.h:333
 msgid "Latvia"
-msgstr ""
+msgstr "ലാത്‌വിയ"
 
 #: src/translations.h:334
 msgid "Libyan Arab Jamahiriya"
-msgstr ""
+msgstr "ലിബിയന്‍ അറബ് ജമാഹിരിയ"
 
 #: src/translations.h:335
 msgid "Morocco"
-msgstr ""
+msgstr "മൊറോക്കൊ"
 
 #: src/translations.h:336
 msgid "Monaco"
-msgstr ""
+msgstr "മൊണാക്കോ"
 
 #: src/translations.h:337
 msgid "Moldova"
-msgstr ""
+msgstr "മൊൾഡോവ"
 
 #: src/translations.h:338
 msgid "Madagascar"
-msgstr ""
+msgstr "മഡഗാസ്കര്‍"
 
 #: src/translations.h:339
 msgid "Marshall Islands"
-msgstr ""
+msgstr "മാര്‍ഷല്‍ ദ്വീപുകള്‍"
 
 #: src/translations.h:340
 msgid "Macedonia"
-msgstr ""
+msgstr "മാസിഡോണിയ"
 
 #: src/translations.h:341
 msgid "Mali"
-msgstr ""
+msgstr "മാലി"
 
 #: src/translations.h:342
 msgid "Myanmar"
-msgstr ""
+msgstr "മ്യാന്മാർ"
 
 #: src/translations.h:343
 msgid "Mongolia"
-msgstr ""
+msgstr "മംഗോളിയ"
 
 #: src/translations.h:344
 msgid "Macau"
-msgstr ""
+msgstr "മക്കൌ"
 
 #: src/translations.h:345
 msgid "Northern Mariana Islands"
-msgstr ""
+msgstr "വടക്കന്‍ മരിയാന ദ്വീപുകള്‍"
 
 #: src/translations.h:346
 msgid "Martinique"
-msgstr ""
+msgstr "മാര്ട്ടിനിക്ക്"
 
 #: src/translations.h:347
 msgid "Mauritania"
-msgstr ""
+msgstr "മൌറിറ്റാനിയ"
 
 #: src/translations.h:348
 msgid "Montserrat"
-msgstr ""
+msgstr "മോണ്ട്സെറാറ്റ്"
 
 #: src/translations.h:349
 msgid "Malta"
-msgstr ""
+msgstr "മാള്‍ട്ട"
 
 #: src/translations.h:350
 msgid "Mauritius"
-msgstr ""
+msgstr "മൗറീഷ്യസ്"
 
 #: src/translations.h:351
 msgid "Maldives"
-msgstr ""
+msgstr "മാലിദ്വീപ്"
 
 #: src/translations.h:352
 msgid "Malawi"
-msgstr ""
+msgstr "മലാവി"
 
 #: src/translations.h:353
 msgid "Mexico"
-msgstr ""
+msgstr "മെക്സിക്കോ"
 
 #: src/translations.h:354
 msgid "Malaysia"
-msgstr ""
+msgstr "മലേഷ്യ"
 
 #: src/translations.h:355
 msgid "Mozambique"
-msgstr ""
+msgstr "മൊസാംബിക്ക്"
 
 #: src/translations.h:356
 msgid "Namibia"
-msgstr ""
+msgstr "നമീബീയ"
 
 #: src/translations.h:357
 msgid "New Caledonia"
-msgstr ""
+msgstr "ന്യൂ സലേഡോണിയ"
 
 #: src/translations.h:358
 msgid "Niger"
-msgstr ""
+msgstr "നൈഗ‌ര്‍"
 
 #: src/translations.h:359
 msgid "Norfolk Island"
-msgstr ""
+msgstr "നോര്‍ഫോക്ക് ദ്വീപു്"
 
 #: src/translations.h:360
 msgid "Nigeria"
-msgstr ""
+msgstr "നൈജീരിയ"
 
 #: src/translations.h:361
 msgid "Nicaragua"
-msgstr ""
+msgstr "നിക്കരാഗ്വ"
 
 #: src/translations.h:362
 msgid "Netherlands"
