--- a/po/stellarium/ml.po
+++ b/po/stellarium/ml.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-23 16:53+0700\n"
-"PO-Revision-Date: 2012-06-25 19:31+0000\n"
+"PO-Revision-Date: 2012-06-26 08:49+0000\n"
 "Last-Translator: Sibi Antony <Unknown>\n"
 "Language-Team: Malayalam <ml@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-26 05:21+0000\n"
+"X-Launchpad-Export-Date: 2012-06-27 05:18+0000\n"
 "X-Generator: Launchpad (build 15482)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -2273,335 +2273,335 @@ msgstr "നിക്കരാഗ്വ"
 
 #: src/translations.h:362
 msgid "Netherlands"
-msgstr ""
+msgstr "നെഥര്‍ലന്‍ഡ്സ്"
 
 #: src/translations.h:363
 msgid "Norway"
-msgstr ""
+msgstr "നോർവെ"
 
 #: src/translations.h:364
 msgid "Nepal"
-msgstr ""
+msgstr "നേപ്പാള്‍"
 
 #: src/translations.h:365
 msgid "Nauru"
-msgstr ""
+msgstr "നൌറു"
 
 #: src/translations.h:366
 msgid "Niue"
-msgstr ""
+msgstr "നിയൂ"
 
 #: src/translations.h:367
 msgid "New Zealand"
-msgstr ""
+msgstr "ന്യൂസീലൻഡ്"
 
 #: src/translations.h:368
 msgid "Oman"
-msgstr ""
+msgstr "ഒമാന്‍"
 
 #: src/translations.h:369
 msgid "Panama"
-msgstr ""
+msgstr "പനാമ"
 
 #: src/translations.h:370
 msgid "Peru"
-msgstr ""
+msgstr "പെറു"
 
 #: src/translations.h:371
 msgid "French Polynesia"
-msgstr ""
+msgstr "ഫ്രഞ്ച് പോളിനേഷ്യ"
 
 #: src/translations.h:372
 msgid "Papua New Guinea"
-msgstr ""
+msgstr "പാപുവ ന്യൂ ഗിനി"
 
 #: src/translations.h:373
 msgid "Philippines"
-msgstr ""
+msgstr "ഫിലിപ്പീന്‍സ്"
 
 #: src/translations.h:374
 msgid "Pakistan"
-msgstr ""
+msgstr "പാക്കിസ്ഥാന്‍"
 
 #: src/translations.h:375
 msgid "Poland"
-msgstr ""
+msgstr "പോളണ്ട്"
 
 #: src/translations.h:376
 msgid "Saint Pierre and Miquelon"
-msgstr ""
+msgstr "സെയിന്റ് പിയറി ആന്‍ഡ് മിക്വിലണ്‍"
 
 #: src/translations.h:377
 msgid "Pitcairn"
-msgstr ""
+msgstr "പിറ്റ്കേര്‍ണ്‍"
 
 #: src/translations.h:378
 msgid "Puerto Rico"
-msgstr ""
+msgstr "പ്യൂര്‍ട്ടോ റികോ"
 
 #: src/translations.h:379
 msgid "Palestinian Territories"
-msgstr ""
+msgstr "പാലസ്തീനിയന്‍ പ്രദേശങ്ങള്‍"
 
 #: src/translations.h:380
 msgid "Portugal"
-msgstr ""
+msgstr "പോ‌ര്‍ച്ചുഗല്‍"
 
 #: src/translations.h:381
 msgid "Palau"
-msgstr ""
+msgstr "പോളൌ"
 
 #: src/translations.h:382
 msgid "Paraguay"
-msgstr ""
+msgstr "പരാഗ്വെ"
 
 #: src/translations.h:383
 msgid "Qatar"
-msgstr ""
+msgstr "ഖത്ത‌ര്‍‍"
 
 #: src/translations.h:384
 msgid "Réunion"
-msgstr ""
+msgstr "റീയൂണിയന്‍"
 
 #: src/translations.h:385
 msgid "Romania"
-msgstr ""
+msgstr "റൊമാനിയ"
 
 #: src/translations.h:386
 msgid "Serbia"
-msgstr ""
+msgstr "സെർബിയ"
 
 #: src/translations.h:387
 msgid "Russian Federation"
-msgstr ""
+msgstr "റഷ്യന്‍ ഫെഡറേഷന്‍"
 
 #: src/translations.h:388
 msgid "Rwanda"
-msgstr ""
+msgstr "റുവാണ്ട"
 
 #: src/translations.h:389
 msgid "Saudi Arabia"
-msgstr ""
+msgstr "സൗദി അറേബ്യ"
 
 #: src/translations.h:390
 msgid "Solomon Islands"
-msgstr ""
+msgstr "സോളമൻ ദ്വീപുകൾ"
 
 #: src/translations.h:391
 msgid "Seychelles"
-msgstr ""
+msgstr "സെയ്‌ഷെൽസ്"
 
 #: src/translations.h:392
 msgid "Sudan"
-msgstr ""
+msgstr "സുഡാൻ"
 
 #: src/translations.h:393
 msgid "Sweden"
-msgstr ""
+msgstr "സ്വീഡൻ"
 
 #: src/translations.h:394
 msgid "Singapore"
-msgstr ""
+msgstr "സിംഗപ്പൂർ"
 
 #: src/translations.h:395
 msgid "Saint Helena"
-msgstr ""
+msgstr "സെയിന്റ് ഹെലേന"
 
 #: src/translations.h:396
 msgid "Slovenia"
-msgstr ""
+msgstr "സ്ലൊവീന്യ"
 
 #: src/translations.h:397
 msgid "Svalbard and Jan Mayen"
-msgstr ""
+msgstr "സ്വാല്‍ബാര്‍ഡും യാന്‍ മായെനും"
 
 #: src/translations.h:398
 msgid "Slovakia"
-msgstr ""
+msgstr "സ്ലോവാക്യ"
 
 #: src/translations.h:399
 msgid "Sierra Leone"
-msgstr ""
+msgstr "സിയേറ ലിയോണ്‍"
 
 #: src/translations.h:400
 msgid "San Marino"
-msgstr ""
+msgstr "സാന്‍ മരീനൊ"
 
 #: src/translations.h:401
 msgid "Senegal"
-msgstr ""
+msgstr "സെനെഗൽ"
 
 #: src/translations.h:402
 msgid "Somalia"
-msgstr ""
+msgstr "സോമാലിയ"
 
 #: src/translations.h:403
 msgid "Suriname"
-msgstr ""
+msgstr "സുരിനാം"
 
 #: src/translations.h:404
 msgid "Sao Tome and Principe"
-msgstr ""
+msgstr "സാവോ ടോം ആൻഡ് പ്രിൻസിപ്പെ"
 
 #: src/translations.h:405
 msgid "El Salvador"
-msgstr ""
+msgstr "എൽ സാൽവദോർ"
 
 #: src/translations.h:406
 msgid "Syrian Arab Republic"
-msgstr ""
+msgstr "സിറിയന്‍ അറബ് റിപ്പബ്ലിക്"
 
 #: src/translations.h:407
 msgid "Swaziland"
-msgstr ""
+msgstr "സ്വാസിലാന്റ്"
 
 #: src/translations.h:408
 msgid "Turks and Caicos Islands"
-msgstr ""
+msgstr "ടർക്സ്-കൈകോസ് ദ്വീപുകൾ"
 
 #: src/translations.h:409
 msgid "Chad"
-msgstr ""
+msgstr "ഛാഡ്"
 
 #: src/translations.h:410
 msgid "French Southern Territories"
-msgstr ""
+msgstr "ഫ്രഞ്ച് തെക്കന്‍ പ്രദേശങ്ങള്‍"
 
 #: src/translations.h:411
 msgid "Togo"
-msgstr ""
+msgstr "ടോഗോ"
 
 #: src/translations.h:412
 msgid "Thailand"
-msgstr ""
+msgstr "തായ്‌ലാന്റ്"
 
 #: src/translations.h:413
 msgid "Tajikistan"
-msgstr ""
+msgstr "താജിക്കിസ്ഥാന്‍"
 
 #: src/translations.h:414
 msgid "Tokelau"
-msgstr ""
+msgstr "ടോക്‌ലവ്"
 
 #: src/translations.h:415
 msgid "East Timor"
-msgstr ""
+msgstr "കിഴക്കൻ ടിമോർ"
 
 #: src/translations.h:416
 msgid "Turkmenistan"
-msgstr ""
+msgstr "തുർക്‌മെനിസ്ഥാൻ"
 
 #: src/translations.h:417
 msgid "Tunisia"
-msgstr ""
+msgstr "ടുണീഷ്യ"
 
 #: src/translations.h:418
 msgid "Tonga"
-msgstr ""
+msgstr "ടോങ്ക"
 
 #: src/translations.h:419
 msgid "Turkey"
-msgstr ""
+msgstr "തുർക്കി"
 
 #: src/translations.h:420
 msgid "Trinidad and Tobago"
-msgstr ""
+msgstr "ട്രിനിഡാഡ് ആന്‍ഡ് ടോബാഗോ"
 
 #: src/translations.h:421
 msgid "Tuvalu"
-msgstr ""
+msgstr "ടുവാലു"
 
 #: src/translations.h:422
 msgid "Taiwan"
-msgstr ""
+msgstr "തായ്‌വാൻ"
 
 #: src/translations.h:423
 msgid "Tanzania"
-msgstr ""
+msgstr "ടാന്‍സാനിയ"
 
 #: src/translations.h:424
 msgid "Ukraine"
-msgstr ""
+msgstr "യുക്രെയിൻ"
 
 #: src/translations.h:425
 msgid "Uganda"
-msgstr ""
+msgstr "ഉഗാണ്ട"
 
 #: src/translations.h:426
 msgid "United States Minor Outlying Islands"
-msgstr ""
+msgstr "യുണൈറ്റഡ് സ്റ്റേറ്റ്സ് മൈനര്‍ ഔട്ട്ലയിങ് ദ്വീപുകള്‍"
 
 #: src/translations.h:427
 msgid "United States"
-msgstr ""
+msgstr "യുണൈറ്റഡ് സ്റ്റേറ്റ്സ്"
 
 #: src/translations.h:428
 msgid "Uruguay"
-msgstr ""
+msgstr "ഉറുഗ്വേ"
 
 #: src/translations.h:429
 msgid "Uzbekistan"
-msgstr ""
+msgstr "ഉസ്ബെക്കിസ്ഥാൻ"
 
 #: src/translations.h:430
 msgid "Vatican City State"
-msgstr ""
+msgstr "വത്തിക്കാൻ നഗരം"
 
 #: src/translations.h:431
 msgid "Saint Vincent and the Grenadines"
-msgstr ""
+msgstr "സെയ്ന്റ് വിൻസന്റ് ആന്റ് ഗ്രനഡീൻസ്"
 
 #: src/translations.h:432
 msgid "Venezuela"
-msgstr ""
+msgstr "വെനിസ്വേല"
 
 #: src/translations.h:433
 msgid "British Virgin Islands"
-msgstr ""
+msgstr "ബ്രിട്ടീഷ് വിര്‍ജിന്‍ ദ്വീപുകള്‍"
 
 #: src/translations.h:434
 msgid "United States Virgin Islands"
-msgstr ""
+msgstr "യുണൈറ്റഡ് സ്റ്റേറ്റ്സ് വിര്‍ജിന്‍ ദ്വീപുകള്‍"
 
 #: src/translations.h:435
 msgid "Viet Nam"
-msgstr ""
+msgstr "വിയറ്റ്നാം"
 
 #: src/translations.h:436
 msgid "Vanuatu"
-msgstr ""
+msgstr "വാന്വാട്ടു"
 
 #: src/translations.h:437
 msgid "Wallis and Futuna"
-msgstr ""
+msgstr "വോളിസ് ആന്റ് ഫുട്ടാന"
 
 #: src/translations.h:438
 msgid "Samoa"
-msgstr ""
+msgstr "സമോവ"
 
 #: src/translations.h:439
 msgid "Yemen"
-msgstr ""
+msgstr "യെമൻ"
 
 #: src/translations.h:440
 msgid "Mayotte"
-msgstr ""
+msgstr "മയോട്ടെ"
 
 #: src/translations.h:441
 msgid "Yugoslavia"
-msgstr ""
+msgstr "യുഗോസ്ലാവിയ"
 
 #: src/translations.h:442
 msgid "South Africa"
-msgstr ""
+msgstr "ദക്ഷിണാഫ്രിക്ക‌"
 
 #: src/translations.h:443
 msgid "Zambia"
-msgstr ""
+msgstr "സാംബിയ"
 
 #: src/translations.h:444
 msgid "Zimbabwe"
-msgstr ""
+msgstr "സിംബാബ്‌വെ"
 
 #: src/ui_dateTimeDialogGui.h:296 src/ui_dateTimeDialogGui.h:297
 msgid "/"
@@ -2618,7 +2618,7 @@ msgstr "സഹായം"
 
 #: src/ui_helpDialogGui.h:267
 msgid "About"
-msgstr ""
+msgstr "വിവരണം"
 
 #: src/ui_helpDialogGui.h:269
 msgid "Log"
@@ -2824,7 +2824,7 @@ msgstr ""
 
 #: src/ui_searchDialogGui.h:588
 msgid "Server:"
-msgstr ""
+msgstr "സെര്‍വര്‍:"
 
 #: src/ui_searchDialogGui.h:589 src/ui_viewDialog.h:1184
 #: src/ui_viewDialog.h:1189 src/ui_viewDialog.h:1191
