--- a/po/stellarium/pt_BR.po
+++ b/po/stellarium/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-29 21:06+0700\n"
-"PO-Revision-Date: 2012-06-29 23:43+0000\n"
+"PO-Revision-Date: 2012-07-01 01:14+0000\n"
 "Last-Translator: Adriano Steffler <Unknown>\n"
 "Language-Team: Portuguese (Brazil) <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-30 04:47+0000\n"
+"X-Launchpad-Export-Date: 2012-07-01 04:38+0000\n"
 "X-Generator: Launchpad (build 15520)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -3238,7 +3238,7 @@ msgstr "Exibir os botões de girar"
 
 #: src/ui_configurationDialog.h:860
 msgid "Toggle display backgrounds of the nebulae."
-msgstr "Alternar a exibição das imagens de fundo das nebulosas"
+msgstr "Alterna a exibição das imagens de fundo das nebulosas"
 
 #: src/ui_configurationDialog.h:862
 msgid "Show nebula background button"
