--- a/po/stellarium/ru.po
+++ b/po/stellarium/ru.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-29 21:06+0700\n"
-"PO-Revision-Date: 2012-06-23 10:10+0000\n"
+"PO-Revision-Date: 2012-06-30 06:45+0000\n"
 "Last-Translator: Alexander Wolf <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-30 04:45+0000\n"
+"X-Launchpad-Export-Date: 2012-07-01 04:38+0000\n"
 "X-Generator: Launchpad (build 15520)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -3217,11 +3217,11 @@ msgstr "Показать копки переворота"
 
 #: src/ui_configurationDialog.h:860
 msgid "Toggle display backgrounds of the nebulae."
-msgstr ""
+msgstr "Переключение отображения фоновых изображений туманностей."
 
 #: src/ui_configurationDialog.h:862
 msgid "Show nebula background button"
-msgstr ""
+msgstr "Показывать кнопку фона туманностей"
 
 #: src/ui_configurationDialog.h:863
 msgid "Planetarium options"
