--- a/po/stellarium-skycultures/ms.po
+++ b/po/stellarium-skycultures/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-05-23 18:43+0700\n"
-"PO-Revision-Date: 2012-05-30 01:22+0000\n"
+"PO-Revision-Date: 2012-07-02 01:12+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-31 04:34+0000\n"
-"X-Generator: Launchpad (build 15322)\n"
+"X-Launchpad-Export-Date: 2012-07-02 04:36+0000\n"
+"X-Generator: Launchpad (build 15520)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -3973,59 +3973,59 @@ msgstr ""
 
 #: skycultures/western/constellation_names.eng.fab:65
 msgid "Equuleus"
-msgstr ""
+msgstr "Equuleus (Kuda Padi)"
 
 #: skycultures/western/constellation_names.eng.fab:66
 msgid "Canis Minor"
-msgstr ""
+msgstr "Canis Minor (Anjing Kecil)"
 
 #: skycultures/western/constellation_names.eng.fab:67
 msgid "Leo Minor"
-msgstr ""
+msgstr "Loe Minor (Singa Kecil)"
 
 #: skycultures/western/constellation_names.eng.fab:68
 msgid "Vulpecula"
-msgstr ""
+msgstr "Vulpecula (Rubah Kecil)"
 
 #: skycultures/western/constellation_names.eng.fab:69
 msgid "Ursa Minor"
-msgstr ""
+msgstr "Ursa Minor (Beruang Kecil)"
 
 #: skycultures/western/constellation_names.eng.fab:70
 msgid "Phoenix"
-msgstr ""
+msgstr "Phoenix (Feniks)"
 
 #: skycultures/western/constellation_names.eng.fab:71
 msgid "Pisces"
-msgstr ""
+msgstr "Pisces (Ikan)"
 
 #: skycultures/western/constellation_names.eng.fab:72
 msgid "Piscis Austrinus"
-msgstr ""
+msgstr "Piscis Austrinus (Piscis Selatan)"
 
 #: skycultures/western/constellation_names.eng.fab:73
 msgid "Volans"
-msgstr ""
+msgstr "Volans (Ikan Terbang)"
 
 #: skycultures/western/constellation_names.eng.fab:74
 msgid "Puppis"
-msgstr ""
+msgstr "Puppis (Kekota)"
 
 #: skycultures/western/constellation_names.eng.fab:75
 msgid "Reticulum"
-msgstr ""
+msgstr "Reticulum (Jala)"
 
 #: skycultures/western/constellation_names.eng.fab:76
 msgid "Sagittarius"
-msgstr ""
+msgstr "Sagittarius (Kaus)"
 
 #: skycultures/western/constellation_names.eng.fab:77
 msgid "Scorpius"
-msgstr ""
+msgstr "Scorpius (Kala)"
 
 #: skycultures/western/constellation_names.eng.fab:79
 msgid "Serpens"
-msgstr ""
+msgstr "Serpens (Ular Besar)"
 
 #: skycultures/western/constellation_names.eng.fab:80
 msgid "Sextans"
@@ -4069,19 +4069,19 @@ msgstr "Vela"
 
 #: skycultures/western/star_names.fab:1
 msgid "Alpheratz"
-msgstr ""
+msgstr "Alpheratz"
 
 #: skycultures/western/star_names.fab:2
 msgid "Caph"
-msgstr ""
+msgstr "Caph"
 
 #: skycultures/western/star_names.fab:3
 msgid "Algenib"
-msgstr ""
+msgstr "Algenib"
 
 #: skycultures/western/star_names.fab:4
 msgid "Ankaa"
-msgstr ""
+msgstr "Ankaa"
 
 #: skycultures/western/star_names.fab:5
 msgid "Shedir"
@@ -4678,11 +4678,11 @@ msgstr "Marsic"
 
 #: skycultures/western/star_names.fab:155
 msgid "Yed Prior"
-msgstr ""
+msgstr "Yed Prior"
 
 #: skycultures/western/star_names.fab:156
 msgid "Yed Posterior"
-msgstr ""
+msgstr "Yed Posterior"
 
 #: skycultures/western/star_names.fab:157
 msgid "Al Niyat"
