--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-29 21:06+0700\n"
-"PO-Revision-Date: 2012-06-25 13:24+0000\n"
+"PO-Revision-Date: 2012-07-02 01:06+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-30 04:43+0000\n"
+"X-Launchpad-Export-Date: 2012-07-02 04:36+0000\n"
 "X-Generator: Launchpad (build 15520)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
@@ -3224,11 +3224,11 @@ msgstr "Papar butang kalih"
 
 #: src/ui_configurationDialog.h:860
 msgid "Toggle display backgrounds of the nebulae."
-msgstr ""
+msgstr "Togol latar belakang paparan nebula."
 
 #: src/ui_configurationDialog.h:862
 msgid "Show nebula background button"
-msgstr ""
+msgstr "Papar butang latar belakang nebula"
 
 #: src/ui_configurationDialog.h:863
 msgid "Planetarium options"
