--- a/po/stellarium-skycultures/es.po
+++ b/po/stellarium-skycultures/es.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-02 13:42+0700\n"
-"PO-Revision-Date: 2012-02-20 19:22+0000\n"
+"PO-Revision-Date: 2012-07-03 05:59+0000\n"
 "Last-Translator: José A. Macas Durazo <josedurazo92@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-03 05:33+0000\n"
-"X-Generator: Launchpad (build 15531)\n"
+"X-Launchpad-Export-Date: 2012-07-04 04:38+0000\n"
+"X-Generator: Launchpad (build 15544)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -2319,7 +2319,7 @@ msgstr "Mozo"
 
 #: skycultures/korean/constellation_names.eng.fab:77
 msgid "Charioteer"
-msgstr ""
+msgstr "Auriga"
 
 #: skycultures/korean/constellation_names.eng.fab:78
 msgid "Human"
@@ -2359,7 +2359,7 @@ msgstr "Palacio independiente"
 
 #: skycultures/korean/constellation_names.eng.fab:88
 msgid "Official for Materials Supply"
-msgstr ""
+msgstr "Oficial para el Suministro de Materiales"
 
 #: skycultures/korean/constellation_names.eng.fab:89
 msgid "Lightening"
@@ -2560,7 +2560,7 @@ msgstr "General del borde"
 
 #: skycultures/korean/constellation_names.eng.fab:142
 msgid "Celebration of Sky"
-msgstr ""
+msgstr "Celebración del Cielo"
 
 #: skycultures/korean/constellation_names.eng.fab:143
 msgid "Flag of Emperor"
