--- a/po/stellarium/pl.po
+++ b/po/stellarium/pl.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-29 21:06+0700\n"
-"PO-Revision-Date: 2012-06-28 23:59+0000\n"
+"PO-Revision-Date: 2012-07-04 00:35+0000\n"
 "Last-Translator: pp/bs <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-06-30 04:44+0000\n"
-"X-Generator: Launchpad (build 15520)\n"
+"X-Launchpad-Export-Date: 2012-07-04 04:38+0000\n"
+"X-Generator: Launchpad (build 15544)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -999,7 +999,7 @@ msgstr "Automatyczne ukrywanie pionowego paska przycisków"
 
 #: src/gui/StelGui.cpp:191
 msgid "Toggle visibility of GUI"
-msgstr "Przełączanie wyświetlania graficznego interfejsu użytkownika"
+msgstr "Włączanie/wyłączanie wyświetlania graficznego interfejsu użytkownika"
 
 #: src/gui/StelGuiItems.cpp:595
 #, no-c-format, qt-format
@@ -3234,7 +3234,8 @@ msgstr "Limit czasu kursora myszy (w sekundach):"
 #: src/ui_configurationDialog.h:856
 msgid "Toggle vertical and horizontal image flip buttons."
 msgstr ""
-"Przełącz wyświetlanie przycisków odwracania obrazu w pionie i w poziomie."
+"Włączanie/wyłączanie wyświetlanie przycisków odwracania obrazu w pionie i w "
+"poziomie."
 
 #: src/ui_configurationDialog.h:858
 msgid "Show flip buttons"
@@ -3242,11 +3243,11 @@ msgstr "Pokaż przyciski odwracania obrazu"
 
 #: src/ui_configurationDialog.h:860
 msgid "Toggle display backgrounds of the nebulae."
-msgstr ""
+msgstr "Włączanie/wyłączanie wyświetlania tła mgławicy."
 
 #: src/ui_configurationDialog.h:862
 msgid "Show nebula background button"
-msgstr ""
+msgstr "Pokaż przycisk tła mgławicy."
 
 #: src/ui_configurationDialog.h:863
 msgid "Planetarium options"
@@ -4136,7 +4137,7 @@ msgstr "Odwrócenie w pionie"
 #: plugins/Pulsars/src/ui_pulsarsDialog.h:263
 #: plugins/Exoplanets/src/ui_exoplanetsDialog.h:245
 msgid "About plugin"
-msgstr ""
+msgstr "O wtyczce"
 
 #: plugins/Satellites/src/Satellites.cpp:65
 #: plugins/Satellites/src/ui_satellitesDialog.h:705
@@ -4153,7 +4154,7 @@ msgstr ""
 
 #: plugins/Satellites/src/Satellites.cpp:130
 msgid "Satellites configuration window"
-msgstr "Okno konfiguracji satelitów"
+msgstr "Okno konfiguracji Satelitów"
 
 #: plugins/Satellites/src/Satellites.cpp:131
 msgid "Satellite hints"
@@ -4394,6 +4395,8 @@ msgid ""
 "Support is provided via the Launchpad website.  Be sure to put \"%1\" in the "
 "subject when posting."
 msgstr ""
+"Pomoc jest dostępna poprzez stronę stronę WWW Launchpad. Zamieszczając swoją "
+"wypowiedź wpisz w temacie \"%1\"."
 
 #. TRANSLATORS: The numbers contain the opening and closing tag of an HTML link
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:299
@@ -4571,7 +4574,7 @@ msgstr "Numer katalogowy: %1"
 #: plugins/Satellites/src/ui_satellitesDialog.h:640
 #: plugins/Satellites/src/ui_satellitesDialog.h:641
 msgid "Satellites Configuration"
-msgstr "Konfiguracja satelitów"
+msgstr "Konfiguracja Satelitów"
 
 #: plugins/Satellites/src/ui_satellitesDialog.h:643
 msgid "Update TLE lists from Internet sources"
@@ -4990,7 +4993,7 @@ msgstr "Konfiguruj &teleskopy..."
 
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:472
 msgid "Telescope Configuration"
-msgstr "Konfiguracja teleskopu"
+msgstr "Konfiguracja Teleskopu"
 
 #: plugins/TelescopeControl/src/ui_telescopeConfigurationDialog.h:474
 msgid "Telescope controlled by:"
@@ -5834,7 +5837,7 @@ msgstr ""
 
 #: plugins/Supernovae/src/Supernovae.cpp:143
 msgid "Historical Supernovae configuration window"
-msgstr "Okno konfiguracji historycznych supernowych"
+msgstr "Okno konfiguracji Historycznych supernowych"
 
 #: plugins/Supernovae/src/Supernova.cpp:99
 msgid "supernova"
@@ -5958,7 +5961,7 @@ msgstr ""
 
 #: plugins/Quasars/src/Quasars.cpp:146
 msgid "Quasars configuration window"
-msgstr "Okno konfiguracji Kwazarów"
+msgstr "Okno konfiguracji kwazarów"
 
 #: plugins/Quasars/src/Quasar.cpp:95
 msgid "quasar"
@@ -5999,7 +6002,7 @@ msgstr ""
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:249
 msgid "Quasars Configuration"
-msgstr ""
+msgstr "Konfiguracja Kwazarów"
 
 #: plugins/Quasars/src/ui_quasarsDialog.h:250
 msgid "Quasars Plug-in Configuration"
@@ -6028,7 +6031,7 @@ msgstr ""
 
 #: plugins/Pulsars/src/Pulsars.cpp:146
 msgid "Pulsars configuration window"
-msgstr "Okno konfiguracji pulsarów"
+msgstr "Okno konfiguracji Pulsarów"
 
 #: plugins/Pulsars/src/Pulsar.cpp:129
 msgid "pulsar"
@@ -6217,30 +6220,33 @@ msgstr "Włącz wyświetlanie rozkładu pulsarów"
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:71
 msgid "Exoplanets"
-msgstr ""
+msgstr "Egzoplanety"
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:74
 msgid ""
 "This plugin plots the position of stars with exoplanets. Exoplanets data is "
 "derived from the 'Extrasolar Planets Encyclopaedia' at exoplanet.eu"
 msgstr ""
+"Ta wtyczka wykreśla pozycje gwiazd z egzoplanetami. Dane na temat egzoplanet "
+"pochodzą z \"Encyklopedii Pozasłonecznych Układów Planetarnych\" dostępnej "
+"pod adresem exoplanet.eu"
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:164
 msgid "Exoplanets configuration window"
-msgstr ""
+msgstr "Okno konfiguracji Egzoplanet"
 
 #: plugins/Exoplanets/src/Exoplanets.cpp:165
 msgid "Show exoplanets"
-msgstr ""
+msgstr "Pokaż egzoplanety"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:178
 msgid "Metallicity"
-msgstr ""
+msgstr "Zawartość metali"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:182
 #: plugins/Exoplanets/src/Exoplanet.cpp:198
 msgid "Mass"
-msgstr ""
+msgstr "Masa"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:186
 #: plugins/Exoplanets/src/Exoplanet.cpp:199
@@ -6250,19 +6256,19 @@ msgstr ""
 #: plugins/Exoplanets/src/Exoplanet.cpp:190
 #, qt-format
 msgid "Effective temperature: %1 K"
-msgstr ""
+msgstr "Temperatura efektywna: %1 K"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:196
 msgid "Exoplanet"
-msgstr ""
+msgstr "Egzoplaneta"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:197
 msgid "Period"
-msgstr ""
+msgstr "Okres orbitalny"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:197
 msgid "days"
-msgstr ""
+msgstr "dni"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:198
 #: plugins/Exoplanets/src/Exoplanet.cpp:199
@@ -6271,7 +6277,7 @@ msgstr ""
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:200
 msgid "Semi-Major Axis"
-msgstr ""
+msgstr "Półoś wielka"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:200
 msgid "AU"
@@ -6279,19 +6285,19 @@ msgstr "J.A."
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:201
 msgid "Eccentricity"
-msgstr ""
+msgstr "Mimośród"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:202
 msgid "Inclination"
-msgstr ""
+msgstr "Nachylenie"
 
 #: plugins/Exoplanets/src/Exoplanet.cpp:203
 msgid "Angle Distance"
-msgstr ""
+msgstr "Odległość kątowa"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:106
 msgid "Exoplanets Plug-in"
-msgstr ""
+msgstr "Wtyczka Egzoplanety"
 
 #: plugins/Exoplanets/src/gui/ExoplanetsDialog.cpp:110
 #, qt-format
