Launchpad automatic translations update.

--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-02 13:42+0700\n"
-"PO-Revision-Date: 2012-05-17 08:27+0000\n"
-"Last-Translator: Marc Hendune <clementgaine@hotmail.fr>\n"
+"PO-Revision-Date: 2012-07-04 20:48+0000\n"
+"Last-Translator: Vincent Sarrazy <v.sarrazy@gmail.com>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-03 05:28+0000\n"
-"X-Generator: Launchpad (build 15531)\n"
+"X-Launchpad-Export-Date: 2012-07-05 04:38+0000\n"
+"X-Generator: Launchpad (build 15544)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -449,7 +449,7 @@ msgstr "Constellation de la couronne Boréale"
 
 #: skycultures/arabic/constellation_names.eng.fab:19
 msgid "The Raven"
-msgstr ""
+msgstr "Le Corbeau"
 
 #: skycultures/arabic/constellation_names.eng.fab:20
 msgid "The Great Cup"
@@ -457,7 +457,7 @@ msgstr ""
 
 #: skycultures/arabic/constellation_names.eng.fab:21
 msgid "The Hen"
-msgstr ""
+msgstr "Le Cygne"
 
 #: skycultures/arabic/constellation_names.eng.fab:22
 msgid "The Dolphin"
@@ -517,7 +517,7 @@ msgstr "Pégase"
 
 #: skycultures/arabic/constellation_names.eng.fab:36
 msgid "Bearer of the Demon's Head"
-msgstr ""
+msgstr "Persée"
 
 #: skycultures/arabic/constellation_names.eng.fab:37
 msgid "The Whale"
@@ -541,7 +541,7 @@ msgstr "Le Scorpion"
 
 #: skycultures/arabic/constellation_names.eng.fab:42
 msgid "The Bull"
-msgstr ""
+msgstr "Le Taureau"
 
 #: skycultures/arabic/constellation_names.eng.fab:43
 msgid "The Triangle"
@@ -561,7 +561,7 @@ msgstr ""
 
 #: skycultures/arabic/constellation_names.eng.fab:47
 msgid "The Maiden"
-msgstr ""
+msgstr "La Vierge"
 
 #: skycultures/arabic/constellation_names.eng.fab:48
 msgid "The Snake"
@@ -569,7 +569,7 @@ msgstr "Le Serpent"
 
 #: skycultures/arabic/constellation_names.eng.fab:49
 msgid "The Beast of Prey"
-msgstr ""
+msgstr "Le Loup"
 
 #: skycultures/arabic/star_names.fab:1
 msgid "Horse navel"
