Launchpad automatic translations update.

--- a/po/stellarium-skycultures/fr.po
+++ b/po/stellarium-skycultures/fr.po
@@ -18,14 +18,14 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-02 13:42+0700\n"
-"PO-Revision-Date: 2012-07-04 20:48+0000\n"
+"PO-Revision-Date: 2012-07-05 17:45+0000\n"
 "Last-Translator: Vincent Sarrazy <v.sarrazy@gmail.com>\n"
 "Language-Team: <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-05 04:38+0000\n"
-"X-Generator: Launchpad (build 15544)\n"
+"X-Launchpad-Export-Date: 2012-07-06 04:37+0000\n"
+"X-Generator: Launchpad (build 15558)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -589,7 +589,7 @@ msgstr ""
 
 #: skycultures/arabic/star_names.fab:5
 msgid "The second frog"
-msgstr ""
+msgstr "Beta Ceti"
 
 #: skycultures/arabic/star_names.fab:6
 msgid "The rope"
