tiny improvement of string for translation into Oculars plugin

--- a/po/stellarium/stellarium.pot
+++ b/po/stellarium/stellarium.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-07-06 23:59+0700\n"
+"POT-Creation-Date: 2012-07-07 00:21+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -3918,7 +3918,7 @@ msgid "On-screen control panel"
 msgstr ""
 
 #: plugins/Oculars/src/ui_ocularDialog.h:879
-msgid "Use degrees and minutes for FOV"
+msgid "Use degrees and minutes for FOV of CCD"
 msgstr ""
 
 #: plugins/Oculars/src/ui_ocularDialog.h:880
