--- a/po/stellarium-skycultures/nb.po
+++ b/po/stellarium-skycultures/nb.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-02 13:42+0700\n"
-"PO-Revision-Date: 2012-04-08 11:07+0000\n"
+"PO-Revision-Date: 2012-07-07 19:46+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-03 05:31+0000\n"
-"X-Generator: Launchpad (build 15531)\n"
+"X-Launchpad-Export-Date: 2012-07-08 04:39+0000\n"
+"X-Generator: Launchpad (build 15558)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
 
@@ -2318,7 +2318,7 @@ msgstr "Stallgutt"
 
 #: skycultures/korean/constellation_names.eng.fab:77
 msgid "Charioteer"
-msgstr ""
+msgstr "Vognkjøreren"
 
 #: skycultures/korean/constellation_names.eng.fab:78
 msgid "Human"
@@ -2358,7 +2358,7 @@ msgstr "Frittliggende slott"
 
 #: skycultures/korean/constellation_names.eng.fab:88
 msgid "Official for Materials Supply"
-msgstr ""
+msgstr "Tjenestemann for materialforsyning"
 
 #: skycultures/korean/constellation_names.eng.fab:89
 msgid "Lightening"
@@ -2559,7 +2559,7 @@ msgstr "Grensegeneral"
 
 #: skycultures/korean/constellation_names.eng.fab:142
 msgid "Celebration of Sky"
-msgstr ""
+msgstr "Himmelfeiring"
 
 #: skycultures/korean/constellation_names.eng.fab:143
 msgid "Flag of Emperor"
