--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-07 00:21+0700\n"
-"PO-Revision-Date: 2012-07-01 14:08+0000\n"
+"PO-Revision-Date: 2012-07-07 19:48+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-07 04:47+0000\n"
+"X-Launchpad-Export-Date: 2012-07-08 04:39+0000\n"
 "X-Generator: Launchpad (build 15558)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
@@ -4001,7 +4001,7 @@ msgstr "Skjermbasert kontrollpanel"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:879
 msgid "Use degrees and minutes for FOV of CCD"
-msgstr ""
+msgstr "Bruk grader og minutter for CCD-synsfelt"
 
 #: plugins/Oculars/src/ui_ocularDialog.h:880
 #: plugins/TextUserInterface/src/TextUserInterface.cpp:214
