--- a/po/stellarium/ky.po
+++ b/po/stellarium/ky.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-07-10 01:06+0700\n"
-"PO-Revision-Date: 2012-07-09 04:35+0000\n"
+"PO-Revision-Date: 2012-07-12 01:05+0000\n"
 "Last-Translator: chingis <chingis091@lavabit.com>\n"
 "Language-Team: Kirghiz <ky@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-10 05:27+0000\n"
-"X-Generator: Launchpad (build 15558)\n"
+"X-Launchpad-Export-Date: 2012-07-12 04:39+0000\n"
+"X-Generator: Launchpad (build 15593)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -2933,7 +2933,7 @@ msgstr "Жарык булганышы:"
 
 #: src/ui_viewDialog.h:1134
 msgid "pressure, temperature, extinction coefficient"
-msgstr "басыш, температура, өчүү коэфициенти"
+msgstr "басым, температура, өчүү коэфициенти"
 
 #: src/ui_viewDialog.h:1136
 msgid "Refraction/Extinction settings..."
@@ -3401,7 +3401,7 @@ msgstr "Сыныш ырастоолору"
 
 #: src/ui_AtmosphereDialog.h:179
 msgid "Pressure (mbar):"
-msgstr "Басыш (мбар):"
+msgstr "Басым (мбар):"
 
 #: src/ui_AtmosphereDialog.h:180
 msgid "Temperature (C):"
@@ -3695,7 +3695,7 @@ msgstr "Окулярлардын калкуучу менюсу"
 
 #: plugins/Oculars/src/Oculars.cpp:1235
 msgid "Crosshairs"
-msgstr "Айкашмалар"
+msgstr "Айкашма"
 
 #: plugins/Oculars/src/Oculars.cpp:1243
 msgid "Image sensor frame"
@@ -4101,7 +4101,7 @@ msgstr "Жолдоштор конфигурациясынын терезеси"
 
 #: plugins/Satellites/src/Satellites.cpp:131
 msgid "Satellite hints"
-msgstr ""
+msgstr "Жолдоштун багыттары"
 
 #: plugins/Satellites/src/Satellites.cpp:133
 msgid "Satellite labels"
