--- a/po/stellarium-skycultures/ca.po
+++ b/po/stellarium-skycultures/ca.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-02 13:42+0700\n"
-"PO-Revision-Date: 2012-05-11 19:01+0000\n"
-"Last-Translator: Joan Salvat <jsalvat@hotmail.com>\n"
+"PO-Revision-Date: 2012-07-11 20:37+0000\n"
+"Last-Translator: Daniel Alomar i Claramonte <daniel.adastra@gmail.com>\n"
 "Language-Team: Català <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-03 05:27+0000\n"
-"X-Generator: Launchpad (build 15531)\n"
+"X-Launchpad-Export-Date: 2012-07-12 04:39+0000\n"
+"X-Generator: Launchpad (build 15593)\n"
 
 #: nebulae/default/ngc2000names.dat:112
 msgid "47 Tuc"
@@ -2318,7 +2318,7 @@ msgstr "Nuvi"
 
 #: skycultures/korean/constellation_names.eng.fab:77
 msgid "Charioteer"
-msgstr ""
+msgstr "Auriga"
 
 #: skycultures/korean/constellation_names.eng.fab:78
 msgid "Human"
@@ -2358,7 +2358,7 @@ msgstr "Palau Independent"
 
 #: skycultures/korean/constellation_names.eng.fab:88
 msgid "Official for Materials Supply"
-msgstr ""
+msgstr "Oficial per al Subministrament de Materials"
 
 #: skycultures/korean/constellation_names.eng.fab:89
 msgid "Lightening"
@@ -2559,7 +2559,7 @@ msgstr "General de la Frontera"
 
 #: skycultures/korean/constellation_names.eng.fab:142
 msgid "Celebration of Sky"
-msgstr ""
+msgstr "Celebració del Cel"
 
 #: skycultures/korean/constellation_names.eng.fab:143
 msgid "Flag of Emperor"
