--- a/po/stellarium/ca.po
+++ b/po/stellarium/ca.po
@@ -11,14 +11,14 @@ msgstr ""
 "Project-Id-Version: ca\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-10 01:06+0700\n"
-"PO-Revision-Date: 2012-04-30 09:24+0000\n"
-"Last-Translator: Marc Coll Carrillo <Unknown>\n"
+"PO-Revision-Date: 2012-07-11 20:48+0000\n"
+"Last-Translator: Daniel Alomar i Claramonte <daniel.adastra@gmail.com>\n"
 "Language-Team: Català <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-07-10 05:23+0000\n"
-"X-Generator: Launchpad (build 15558)\n"
+"X-Launchpad-Export-Date: 2012-07-12 04:39+0000\n"
+"X-Generator: Launchpad (build 15593)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -535,15 +535,15 @@ msgstr "Quan un script s'està executant"
 
 #: src/gui/HelpDialog.cpp:73
 msgid "Stop currently running script"
-msgstr ""
+msgstr "Atura l'execució actual de l'script"
 
 #: src/gui/HelpDialog.cpp:74 src/gui/StelGui.cpp:152 src/gui/StelGui.cpp:153
 msgid "Pause script execution"
-msgstr ""
+msgstr "Pausa l'execució de l'script"
 
 #: src/gui/HelpDialog.cpp:75 src/gui/StelGui.cpp:154
 msgid "Resume script execution"
-msgstr ""
+msgstr "Continua l'execucio de l'script"
 
 #: src/gui/HelpDialog.cpp:76 src/gui/StelGui.cpp:149
 msgid "Slow down the script execution rate"
@@ -983,7 +983,7 @@ msgstr "Copia la informació del objecte seleccionat al portapapers"
 
 #: src/gui/StelGui.cpp:189
 msgid "Go to home"
-msgstr ""
+msgstr "Ves a casa"
 
 #: src/gui/StelGui.cpp:191
 msgid "Auto hide horizontal button bar"
@@ -3232,11 +3232,11 @@ msgstr "Mostra botons d'inversió"
 
 #: src/ui_configurationDialog.h:860
 msgid "Toggle display backgrounds of the nebulae."
-msgstr ""
+msgstr "Alternar fons de pantalla de les nebuloses."
 
 #: src/ui_configurationDialog.h:862
 msgid "Show nebula background button"
-msgstr ""
+msgstr "Mostra el botó nebulosa de fons"
 
 #: src/ui_configurationDialog.h:863
 msgid "Planetarium options"
@@ -3899,7 +3899,7 @@ msgstr ""
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:421
 msgid "Oculars Plug-in"
-msgstr ""
+msgstr "Connector d'oculars"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:422
 #: plugins/Satellites/src/gui/SatellitesDialog.cpp:259
@@ -3912,7 +3912,7 @@ msgstr "Versió"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:427
 msgid "Overview"
-msgstr ""
+msgstr "Vista general"
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:429
 msgid ""
@@ -3921,6 +3921,11 @@ msgid ""
 "and telescopes, as well as CCD Sensors.  Your first time running the app "
 "will populate some samples to get your started."
 msgstr ""
+"Aquest connector està dissenyat per simular el que es veuria a través d'un "
+"ocular. Aquest quadre de diàleg de configuració es pot utilitzar per afegir, "
+"modificar o eliminar oculars i telescopis, així com els sensors CCD. La "
+"primera vegada que s'executa l'aplicació, aquesta omplirà algunes mostres "
+"per que tingui d'exemple."
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:430
 msgid ""
@@ -3932,6 +3937,14 @@ msgid ""
 "image scaled, a good deal of the screen can be wasted.  Therefor I recommend "
 "that you leave it off, unless you feel you have a need of it."
 msgstr ""
+"Vostè pot triar l'escala de la imatge que vostè veu a la pantalla. Amb això "
+"es pretén mostrar una millor comparació del que una combinació "
+"ocular/telescopi serà com en comparació amb un altre. El mateix ocular en "
+"dos telescopis de diferent longitud focal es produeixen dos cercles de "
+"sortida diferents, canviant la vista. La conclusió d'això és que, amb la "
+"imatge a escala, una bona part de la pantalla es pot desaprofitar. A aquest "
+"efecte en recomane que ho deixi desactivat, a menys que vostè pensi que té "
+"una necessitat d'aquesta."
 
 #: plugins/Oculars/src/gui/OcularDialog.cpp:431
 msgid ""
